--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "2019-tallercomenzarproyecto",
+  "name": "DataLovers Accidents",
   "version": "0.0.1",
   "description": "Accidents DATALOVERS.",
   "main": "index.js",
