Agregando data json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DataLovers-Accidents",
+  "name": "accidentsdatalovers",
   "version": "0.0.1",
   "description": "Accidents DATALOVERS.",
   "main": "index.js",
